<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1"
        android:background="@mipmap/nuevo_fondo"/>

    <LinearLayout
        android:id="@+id/llContenedorSuperior"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"
        android:background="@drawable/menu_superior">

        <LinearLayout
            android:id="@+id/ll_contenedor_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/tvBienvenido"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.78"
                android:layout_marginStart="3dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/tvWelcome"
                android:maxLines="1"
                android:textColor="@color/gray_700"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvNameUser"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:layout_marginStart="3dp"
                android:maxLines="1"
                android:fontFamily="@font/poppins_semibold"
                android:textColor="@color/gray_700"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/btnCerrarSesion"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.55"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/btnCerrarSesion"
                android:textColor="@color/azul_degra2"
                android:textSize="13sp"
                android:layout_marginEnd="3dp"/>
        </LinearLayout>







    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llContenedorSuperior"
        app:layout_constraintVertical_bias="0">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvDateIni"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:fontFamily="@font/poppins_light"
                android:text="@string/tvfechaInit"
                android:textColor="@color/gray_700"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/tvDateFechaInit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_light"
                android:text="@string/tvDatefechaInit"
                android:textColor="@color/gray_700"
                android:textSize="20sp" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDate"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:background="@drawable/fondo_degradado"
            android:fontFamily="@font/poppins_bold"
            android:paddingHorizontal="10dp"
            android:text="@string/btnFechaFin"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvDateFin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:fontFamily="@font/poppins_light"
                android:text="@string/tvfechaFin"
                android:textColor="@color/gray_700"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/tvDateFechaFin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_light"
                android:text="@string/tvDatefechaFin"
                android:textColor="@color/gray_700"
                android:textSize="20sp" />

        </LinearLayout>


    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvAsteroides"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toTopOf="@+id/llContenedorinferior"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0" />

    <LinearLayout
        android:id="@+id/llContenedorinferior"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1"
        android:background="@drawable/menu_superior">

            <TextView
                android:id="@+id/btnConsuta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginVertical="10dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/btnConsulta"
                android:textColor="@color/azul_degra2"
                android:textSize="13sp"
                android:layout_marginEnd="3dp"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>